--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
-  text-align: center;
+    min-height: 100vh;
+    background-image: linear-gradient( to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.search-form {
+    min-height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search-bar {
+    border: 3px solid transparent;
+    height: 40px;
+    width: 50%;
+    border-radius: 50px;
+    padding: 10px;
+    margin-right: 1rem;
+    outline: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card-img-top {
+    border-radius: 50%;
+    margin-top: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.card-title {
+    /* color: ; */
+    font-size: x-large;
+    justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#card {
+    padding: 0.5rem;
+    box-shadow: 0px 5px 20px black;
 }
